Products Create, Update, Delete, Get APIS are created and tested, Added documentations to README.md and Swagger
